; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4437.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4437.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [444 x i8] c"usage: %s [-h] [-v] [-r] [-d <host>] [-s <script>] [-p <port>]\0A       [-n <header names>] [-a <header values>] [-o <output>]\0A\0A-h        help\0A-v        verbose\0A-r        enable random mode\0A-d host   HTTP server\0A-p port   HTTP port (default: %s)\0A-s script script url on remote server (default: %s)\0A-n value  header names (comma seperated, default: %s)\0A-a value  header values (comma seperated, default: %s)\0A-o output save result in output file\0A\0A\00", align 1
@DEFAULT_PORT = common dso_local global i8* null, align 8
@DEFAULT_SCRIPT = common dso_local global i8* null, align 8
@DEFAULT_NAME = common dso_local global i8* null, align 8
@DEFAULT_VALUE = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %5 = load i32, i32* @stderr, align 4
  %6 = load i8**, i8*** %4, align 8
  %7 = getelementptr inbounds i8*, i8** %6, i64 0
  %8 = load i8*, i8** %7, align 8
  %9 = load i8*, i8** @DEFAULT_PORT, align 8
  %10 = load i8*, i8** @DEFAULT_SCRIPT, align 8
  %11 = load i8*, i8** @DEFAULT_NAME, align 8
  %12 = load i8*, i8** @DEFAULT_VALUE, align 8
  %13 = call i32 @fprintf(i32 %5, i8* getelementptr inbounds ([444 x i8], [444 x i8]* @.str, i64 0, i64 0), i8* %8, i8* %9, i8* %10, i8* %11, i8* %12)
  %14 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*, i8*, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
